--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.2",
+    "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@supabase/supabase-js": "^2.76.1",
+    "openai": "^6.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
